improve login flow

--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -2,7 +2,7 @@
   <md-icon [routerLink]="['/login']" svgSrc="assets/images/md-home.svg"></md-icon>
   <span>People</span>
   <span class="flex"></span>
-  <user-link name="Cyril Balit" (logout)="logout()"></user-link>
+  <user-link *ngIf="user" [attr.name]="user.firstname" (logout)="logout()"></user-link>
   <span>    
     <md-icon [routerLink]="['/people']" svgSrc="assets/images/md-list.svg"></md-icon>
   </span>
