--- a/react/static/styles/main.css
+++ b/react/static/styles/main.css
@@ -24,7 +24,7 @@ nav {
 
 .map {
   color:white;
-  min-height: 300px;
+  height: 80vh;
 }
 
 .flex{
@@ -32,7 +32,7 @@ nav {
 }
 
 google-map {
-  height: 300px;
+  height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
