--- a/angular2/src/app/people/maps/maps.component.html
+++ b/angular2/src/app/people/maps/maps.component.html
@@ -1,6 +1,6 @@
 
 <md-card>
-  <google-map latitude="48.8534100" longitude="2.3488000" fit-to-markers>    
+  <!--<google-map latitude="48.8534100" longitude="2.3488000" fit-to-markers>    
     <google-map-marker *ngFor="let person of people" [attr.latitude]="person.geo?.lat" [attr.longitude]="person.geo?.lng"
     draggable="true" animation="DROP" [open]="person===currentPerson" title="{{ person.firstname }} {{ person.lastname }}">
       <section class="layout vertical center">
@@ -11,5 +11,5 @@
           <img src="{{person.photo}}">
       </section>
     </google-map-marker>
-  </google-map>
+  </google-map>-->
 </md-card>
