--- a/angular1/app/views/login.html
+++ b/angular1/app/views/login.html
@@ -3,7 +3,7 @@
       login-url='{{loginUrl}}'
       login-success="login($pEvent)"
       bind-polymer-event="login-success">                                   
-      <span id="title">DevFest Nantes</span>
-      <img id="logo" src="images/devfest.jpg"/>
+      <span id="title">Snowcamp 2017</span>
+      <img id="logo" src="images/snowcamp.png"/>
   </frf-login>
 </section>
