--- a/angular2/src/app/login/login.component.html
+++ b/angular2/src/app/login/login.component.html
@@ -3,6 +3,6 @@
 <frf-login
     [attr.login-url]="loginUrl"                               
     (login-success)="login($event)">
-    <span id="title">DevFest Nantes</span>
-    <img id="logo" src="/assets/images/devfest.jpg"/>
+    <span id="title">Snowcamp 2017</span>
+    <img id="logo" src="/assets/images/snowcamp.png"/>    
 </frf-login>
