--- a/angular1/app/views/map.html
+++ b/angular1/app/views/map.html
@@ -1,9 +1,8 @@
 <section class="links">
-    <a href="#/peoples"><md-icon md-svg-src="images/dashboard.svg"></md-icon><span>List</span></a>
-    <a href="#/maps"><md-icon md-svg-src="images/md-map.svg"></md-icon><span>Map</span></a>
+    <a href="#!/peoples"><md-icon md-svg-src="images/dashboard.svg"></md-icon><span>List</span></a>
+    <a href="#!/maps"><md-icon md-svg-src="images/md-map.svg"></md-icon><span>Map</span></a>
 </section>
-<section class="mapCtnr">
-  {{JSON.stringify(peoples)}}
+<section class="mapCtnr">  
   <google-map-wrapper
       loading="{{false}}"
       latitude="48.8534100"
