--- a/angular1/app/views/peoples.html
+++ b/angular1/app/views/peoples.html
@@ -1,6 +1,6 @@
 <section class="links">
-    <a href="#/peoples"><md-icon md-svg-src="images/dashboard.svg"></md-icon><span>List</span></a>
-    <a href="#/maps"><md-icon md-svg-src="images/md-map.svg"></md-icon><span>Map</span></a>
+    <a href="#!/peoples"><md-icon md-svg-src="images/dashboard.svg"></md-icon><span>List</span></a>
+    <a href="#!/maps"><md-icon md-svg-src="images/md-map.svg"></md-icon><span>Map</span></a>
 </section>
 
 <section class="peopleCtnr">
@@ -34,7 +34,7 @@
         </md-card-title-media>
       </md-card-title>
       <md-card-actions layout="row" layout-align="end center">
-        <a href="#/maps/{{person.id}}" md-button title="Locate">
+        <a href="#!/maps/{{person.id}}" md-button title="Locate">
            <md-icon md-svg-src="images/md-map.svg"></md-icon>
          </a>
       </md-card-actions>
